# Hummingbird_Demo

./: .env  .gitignore  .gitmodules  README.md  autonomy_entrypoint.sh  docker-compose.yaml  final_analysis.csv  setup_new_agx.sh
ardupilot_SITL/: Dockerfile.sitl  convert_params_to_parm.py  docker-compose.yaml  install_ubuntu_prereqs.sh  sitl_entrypoint.sh
ardupilot_SITL/iris_aero/: model.sdf
ardupilot_SITL/iris_launch/: iris.launch.py
ardupilot_SITL/iris_model/: model.sdf
ardupilot_SITL/iris_urdf/: iris.urdf
ardupilot_SITL/params/: extra.params  gazebo-iris-gimbal.parm
ardupilot_SITL/worlds/: iris_runway.sdf
autonomy/src/bag_recorder/: package.xml  setup.py
autonomy/src/common_utils/: setup.py
autonomy/src/control_test/: package.xml  setup.cfg  setup.py
autonomy/src/control_test/config/: control_test_config.yaml  vel_control_test_config.yaml  wire_control_test_config.yaml
autonomy/src/control_test/control_test/: pos_control_test.py  transform_test.py  vel_control_test.py  wire_control_test.py
autonomy/src/control_test/launch/: control_test.launch.xml  vel_control_test.launch.xml  wire_control_test.launch.xml
autonomy/src/macvo/: package.xml  setup.py
autonomy/src/mavros_manager/: package.xml  setup.cfg  setup.py
autonomy/src/mavros_manager/mavros_manager/: mavros_manager_node.py
autonomy/src/ransac_pybind/: CMakeLists.txt  package.xml
autonomy/src/system_bringup/: package.xml  setup.py
autonomy/src/system_tests/: inference_speed_test.py  test_opencv_cuda.py
autonomy/src/tests/: 1746650644535430624.npy  control_test.py  platform_speed_test.py  test_cuda_speed.py  test_opencv_cuda.py
autonomy/src/vins_fusion/: CMakeLists.txt
autonomy/src/vins_fusion/vins/: CMakeLists.txt
autonomy/src/vins_fusion/vins/config/zedx/: left_pinhole.yaml
autonomy/src/vins_fusion/vins/src/estimator/: estimator.cpp
autonomy/src/visual_servoing/: package.xml  setup.cfg  setup.py
autonomy/src/wire_autonomy/ransac_bindings/: CMakeLists.txt  package.xml
autonomy/src/wire_autonomy/ransac_bindings/ransac_bindings/: __init__.py
autonomy/src/wire_autonomy/servoing/: package.xml  setup.cfg  setup.py
autonomy/src/wire_autonomy/servoing/config/: servoing_config.yaml
autonomy/src/wire_autonomy/servoing/launch/: servoing.launch.xml
autonomy/src/wire_autonomy/servoing/servoing/: servoing_node.py
autonomy/src/wire_autonomy/wire_detection/: CMakeLists.txt  package.xml  setup.py
autonomy/src/wire_autonomy/wire_detection/config/: wire_detection_config.yaml
autonomy/src/wire_autonomy/wire_detection/launch/: wire_detection.launch.xml
autonomy/src/wire_autonomy/wire_detection/rviz/: wire_detection.rviz
autonomy/src/wire_autonomy/wire_detection/wire_detection/: __init__.py  wire_detection_node.py  wire_detection_utils.py  wire_detector_base.py  wire_detector_platforms.py
autonomy/src/wire_autonomy/wire_tracking/: CMakeLists.txt  package.xml  setup.cfg  setup.py
autonomy/src/wire_autonomy/wire_tracking/config/: wire_tracking_config.yaml
autonomy/src/wire_autonomy/wire_tracking/include/wire_tracking/: coord_transforms.h  direction_kf.h  position_kf.h  wire_tracking_node.h
autonomy/src/wire_autonomy/wire_tracking/launch/: wire_tracking.launch.py  wire_tracking.launch.xml
autonomy/src/wire_autonomy/wire_tracking/rviz/: wire_tracking.rviz
autonomy/src/wire_autonomy/wire_tracking/src/: coord_transforms.cpp  direction_kf.cpp  position_kf.cpp  wire_tracking_node.cpp
autonomy/src/wire_autonomy/wire_tracking/wire_tracking/: coord_transforms.py  kalman_filters.py  wire_tracking_node.py
autonomy/src/wire_autonomy/wire_tracking_cpp/: CMakeLists.txt  package.xml
autonomy/src/wire_autonomy/wire_tracking_cpp/config/: wire_tracking_config.yaml
autonomy/src/wire_autonomy/wire_tracking_cpp/include/: coord_transforms.h  direction_kf.h  position_kf.h
autonomy/src/wire_autonomy/wire_tracking_cpp/include/wire_tracking_cpp/: wire_tracking_node..h
autonomy/src/wire_autonomy/wire_tracking_cpp/src/: coord_transforms.cpp  direction_kf.cpp  position_kf.cpp
autonomy/src/wire_detection/: setup.py
autonomy/src/wire_interfaces/: CMakeLists.txt  package.xml
autonomy/src/wire_interfaces/msg/: WireDetection.msg  WireDetections.msg  WireEstimate.msg  WireEstimates.msg  WireTarget.msg
autonomy/src/wire_tracking/: package.xml  setup.py
autonomy_src/wire_detection/wire_detection/: wire_detection_node.py
docker/: Dockerfile.autonomy  Dockerfile.base  Dockerfile.l4t-humble  Dockerfile.mine  Dockerfile.rtsp  Dockerfile.zed  Dockerfile.zed-dev  Dockerfile.zed-test  autonomy_entrypoint.sh  build.sh  build_dev.sh  build_test.sh  comp  download_from_minio.py  jetson_build_dockerfile_from_sdk_and_l4T_version.sh  ros_entrypoint.sh  ros_entrypoint_jetson.sh  rti_sensor_qos_profile.xml  rtsp_entrypoint.sh  start.sh  zed_entrypoint.sh
gcs/: play_stream.sh
gcs/launch/: tracking_viz.launch.py
image2rtsp/config/: depth_config.yaml  detection_config.yaml  parameters.yaml  wire_rtsp_config.yaml
image2rtsp/launch/: dual_image2rtsp.launch.py  image2rtsp.launch.py
image2rtsp/python/: rtsp.py
image2rtsp/src/: image2rtsp.cpp  video.cpp
image2rtsp/src/config/: parameters.yaml
image2rtsp/src/launch/: dual_image2rtsp.launch.py
src/visual_servoing_python/: setup.cfg  setup.py
src/visual_servoing_python/config/: visual_servo_config.yaml
src/visual_servoing_python/launch/: visual_servo_launch.xml
src/visual_servoing_python/visual_servoing_python/: visual_servo_node.py  wire_detection.py
src/wire_detection/: package.xml  setup.cfg  setup.py
src/wire_detection/config/: wire_detection_config.yaml
src/wire_detection/launch/: wire_detection.launch.xml
src/wire_detection/visual_servoing_python/: wire_detection_node.py
utils/: pose_player.py  pose_visualizer.py  setup_new_agx.sh
zed_wrapper/: CMakeLists.txt  package.xml
zed_wrapper/config/: common.yaml  common_stereo.yaml  ffmpeg.yaml  pose_common.yaml  wire_common.yaml  zedx.yaml
zed_wrapper/launch/: zed_camera.launch.py  zed_dual_camera.launch.py
zed_wrapper/src/config/: pose_common.yaml  zedx.yaml
(+98 files in other folders)
