<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tharp@andrew.cmu.edu">tyler</maintainer>
  <license>TODO: License declaration</license>

  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
