<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavros_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tharp@andrew.cmu.edu">tyler</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mavros_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
