<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wire_tracking</name>
  <version>0.1.0</version>
  <description>Wire tracking ROS 2 package</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>common_utils</depend>
  
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend> <!-- Specify any runtime dependencies -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>